// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`synthetix-debt-pool errors throws an error if the request contains a source without a chain configuration 1`] = `
Object {
  "error": Object {
    "feedID": "{\\"data\\":{\\"chainSources\\":[\\"ethereum-fake\\"],\\"resultPath\\":\\"debt\\"}}",
    "message": "Missing configuration for chain: ETHEREUM-FAKE",
    "name": "AdapterError",
  },
  "jobRunID": 1,
  "status": "errored",
  "statusCode": 500,
}
`;

exports[`synthetix-debt-pool when making a request to fetch the current debt successfully fetches the current debt size of the synthetix debt cache across all chains if chainSources is empty 1`] = `
Object {
  "data": Object {
    "result": "758618151172639662332421256",
  },
  "jobRunID": 1,
  "result": "758618151172639662332421256",
  "statusCode": 200,
}
`;

exports[`synthetix-debt-pool when making a request to fetch the current debt successfully fetches the current debt size of the synthetix debt cache across all chains if chainSources is missing 1`] = `
Object {
  "data": Object {
    "result": "758618151172639662332421256",
  },
  "jobRunID": 1,
  "result": "758618151172639662332421256",
  "statusCode": 200,
}
`;

exports[`synthetix-debt-pool when making a request to fetch the current debt successfully fetches the current debt size of the synthetix debt cache for only one chain 1`] = `
Object {
  "data": Object {
    "result": "1279602875189552479134253351",
  },
  "jobRunID": 1,
  "result": "1279602875189552479134253351",
  "statusCode": 200,
}
`;
